--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,9 @@ server {
             tcp_nopush          on;
             keepalive_timeout   65;
             tcp_nodelay         on;
+            absolute_redirect   off;
                # First attempt to serve request as file, then
                # as directory, then fall back to displaying a 404.
-            #try_files $uri $uri/ =404;
+            try_files $uri $uri/ =404;
         }
 }
