--- a/nginx.conf
+++ b/nginx.conf
@@ -5,12 +5,18 @@ server {
         location / {
             autoindex           on;
             sendfile            on;
-            #sendfile_max_chunk  1m;
+            sendfile_max_chunk  1m;
             tcp_nopush          on;
             keepalive_timeout   65;
             tcp_nodelay         on;
+            absolute_redirect   off;
                # First attempt to serve request as file, then
                # as directory, then fall back to displaying a 404.
-            #try_files $uri $uri/ =404;
+            try_files $uri $uri/ =404;
+            proxy_connect_timeout       300;
+            proxy_send_timeout          300;
+            proxy_read_timeout          300;
+            proxy_set_header Connection "";
+            send_timeout                300;
         }
 }
