--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,8 @@
+
 server {
+        types {
+            text/plain  list;
+        }
         listen 8080 default_server;
         listen [::]:8080 default_server;
         root /eups/;
