--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,23 @@
-worker_processes  auto;
-
-#error_log  /tmp/log/nginx/error.log notice;
-pid /tmp/nginx.pid;
-
-# Need to load ngx_http_xslt_filter_module
-load_module modules/ngx_http_xslt_filter_module.so;
-
-events {
-    worker_connections  1024;
-}
-
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-    client_body_temp_path /tmp/client_temp;
-    proxy_temp_path       /tmp/proxy_temp_path;
-    fastcgi_temp_path     /tmp/fastcgi_temp;
-    uwsgi_temp_path       /tmp/uwsgi_temp;
-    scgi_temp_path        /tmp/scgi_temp;
+# worker_processes  auto;
+#
+# #error_log  /tmp/log/nginx/error.log notice;
+# pid /tmp/nginx.pid;
+#
+# # Need to load ngx_http_xslt_filter_module
+# load_module modules/ngx_http_xslt_filter_module.so;
+#
+# events {
+#     worker_connections  1024;
+# }
+#
+# http {
+#     include       /etc/nginx/mime.types;
+#     default_type  application/octet-stream;
+#     client_body_temp_path /tmp/client_temp;
+#     proxy_temp_path       /tmp/proxy_temp_path;
+#     fastcgi_temp_path     /tmp/fastcgi_temp;
+#     uwsgi_temp_path       /tmp/uwsgi_temp;
+#     scgi_temp_path        /tmp/scgi_temp;
 server {
         types {
             text/plain  list;
@@ -41,21 +41,21 @@ server {
             proxy_read_timeout          300;
             proxy_set_header Connection "";
             send_timeout                300;
-                        autoindex_format xml;
-            xslt_stylesheet /style.xsl;
-    	    set $sortC M;
-	        set $sortO D;
-
-            if ($args ~ 'C=(.)' ) {
-	        set $sortC $1;
-            }
-            if ($args ~ 'O=(.)' ) {
-	        set $sortO $1;
-            }
-
-	        xslt_string_param sort-C $sortC;
-	        xslt_string_param sort-O $sortO;
-	        xslt_string_param location $uri;
+    	    #    autoindex_format xml;
+    	    #    xslt_stylesheet /style.xsl;
+    	    # set $sortC M;
+    	    # set $sortO D;
+    	    #
+    	    #    if ($args ~ 'C=(.)' ) {
+    	    # set $sortC $1;
+    	    #    }
+    	    #    if ($args ~ 'O=(.)' ) {
+    	    # set $sortO $1;
+    	    #    }
+    	    #
+    	    # xslt_string_param sort-C $sortC;
+    	    # xslt_string_param sort-O $sortO;
+    	    # xslt_string_param location $uri;
         }
-}
+
 }
