--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 time = "0.3.44"
+log = "0.4"
+env_logger = "0.11"
 google-cloud-storage = { package="gcloud-storage", version="1.1.1" }
 tokio = {version = "1.47.1", features = ["full"]}
 warp = {version ="0.3.6"}
